--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>Fries Bag Game 🍟</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -19,6 +21,12 @@
                 <div class="score">Score: <span id="score">0</span></div>
                 <div class="lives">Lives: <span id="lives">3</span></div>
                 <div class="level">Level: <span id="level">1</span></div>
+            </div>
+            <div class="controls">
+                <div class="slider-container">
+                    <span>Speed:</span>
+                    <input type="range" id="fryRateSlider" min="1" max="5" step="0.5" value="1">
+                </div>
             </div>
             <canvas id="gameCanvas"></canvas>
         </div>
