--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <div class="controls">
                 <div class="slider-container">
                     <span>Speed:</span>
-                    <input type="range" id="fryRateSlider" min="1" max="5" step="0.5" value="1">
+                    <input type="range" id="fryRateSlider" min="1" max="10" step="0.5" value="1">
+                </div>
+                <div class="autoplay-container">
+                    <button id="autoplay-button">Autoplay: Off</button>
                 </div>
             </div>
             <canvas id="gameCanvas"></canvas>
